syntax = "proto3";

import "service/hub/join.proto";
import "service/rpc.proto";

package hub.peppermint;

option go_package = "peppermint/service/hub";

message Response {
  .peppermint.ResponseHeader header = 1;
  oneof body {
    JoinHello.Response join_hello = 2;
    Join.Response join = 3;
  }
}

service Hub {
  rpc JoinHello(JoinHello.Request) returns (Response) { }
  rpc Join(Join.Request) returns (Response) {  }
}
